Simple implementation of MaxPriorityQueue based in array added

--- a/Algorithms/Implementation.Tests/Implementation.Tests.csproj
+++ b/Algorithms/Implementation.Tests/Implementation.Tests.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CormenExercicesTests.cs" />
+    <Compile Include="MaxQueueTests.cs" />
     <Compile Include="Sorting.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
