--- a/Algorithms/Implementation/Implementation.csproj
+++ b/Algorithms/Implementation/Implementation.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="CormenExercices\ArrayExtensions.cs" />
     <Compile Include="CormenExercices\InversionCounter.cs" />
+    <Compile Include="CormenExercices\MaxPriorityQueue.cs" />
     <Compile Include="CormenExercices\SmartMergeSort.cs" />
     <Compile Include="Sorting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
