FIndTheMedian hackerrank problem added. Renaming refactoring

--- a/Algorithms/Implementation.Tests/Implementation.Tests.csproj
+++ b/Algorithms/Implementation.Tests/Implementation.Tests.csproj
@@ -58,7 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CormenExercicesTests.cs" />
+    <Compile Include="Exercices.Tests.cs" />
     <Compile Include="MaxQueueTests.cs" />
     <Compile Include="Sorting.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
