--- a/Algorithms/Implementation/Implementation.csproj
+++ b/Algorithms/Implementation/Implementation.csproj
@@ -40,10 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CormenExercices\ArrayExtensions.cs" />
-    <Compile Include="CormenExercices\InversionCounter.cs" />
-    <Compile Include="CormenExercices\MaxPriorityQueue.cs" />
-    <Compile Include="CormenExercices\SmartMergeSort.cs" />
+    <Compile Include="Exercices\ArrayExtensions.cs" />
+    <Compile Include="Exercices\InversionCounter.cs" />
+    <Compile Include="Exercices\MaxPriorityQueue.cs" />
+    <Compile Include="Exercices\SmartMergeSort.cs" />
     <Compile Include="Sorting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
