--- a/Algorithms/Implementation.Tests/Implementation.Tests.csproj
+++ b/Algorithms/Implementation.Tests/Implementation.Tests.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimpleDS\Queue.Tests.cs" />
     <Compile Include="Sorting\Exercices.Tests.cs" />
     <Compile Include="Sorting\MaxQueueTests.cs" />
     <Compile Include="Sorting\Sorting.Tests.cs" />
