LinkedList renamed to DoubleLinkedList

--- a/Algorithms/Implementation/Implementation.csproj
+++ b/Algorithms/Implementation/Implementation.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SimpleDS\LinkedList.cs" />
+    <Compile Include="SimpleDS\DoubleLinkedList.cs" />
     <Compile Include="SimpleDS\Queue.cs" />
     <Compile Include="SimpleDS\Stack.cs" />
     <Compile Include="Sorting\Exercices\ArrayExtensions.cs" />
