--- a/Algorithms/Implementation.Tests/Implementation.Tests.csproj
+++ b/Algorithms/Implementation.Tests/Implementation.Tests.csproj
@@ -62,7 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SimpleDS\LinkedList.Test.cs" />
+    <Compile Include="SimpleDS\DoubleLinkedList.Test.cs" />
     <Compile Include="SimpleDS\Queue.Tests.cs" />
     <Compile Include="Sorting\Exercices.Tests.cs" />
     <Compile Include="Sorting\MaxQueueTests.cs" />
